[package]
name = "tomato-timer"
version = "0.2.2"
authors = ["sigoden <sigoden@gmail.com>"]
edition = "2018"
description = """
Simple timer for pomodoro technique
"""
repository = "https://github.com/sigoden/tomato-timer"
keywords = ["terminal", "fonts"]
exclude = ["assets/*", ".github"]
readme = "README.md"

[dependencies]
clap = "3.0.0-beta.1"
tui = { version = "0.9", features = ["crossterm"], default-features = false }
crossterm = "0.17"
terminal-fonts = "0.1.0"

[target.'cfg(not(target_os="windows"))'.dependencies]
notify-rust = "3.6.3"
