[package]
name = "tomato-timer"
version = "0.3.0"
authors = ["sigoden <sigoden@gmail.com>"]
edition = "2018"
description = """
Simple timer for pomodoro technique
"""
repository = "https://github.com/sigoden/tomato-timer"
keywords = ["terminal", "fonts"]
exclude = ["assets/*", ".github"]
readme = "README.md"

[dependencies]
clap = { version = "3", features = ["derive"] }
tui = { version = "0.17" }
crossterm = "0.23"
terminal-fonts = "0.1.0"
notify-rust = "4"
