[package]
name = "tomato-timer"
version = "0.4.0"
authors = ["sigoden <sigoden@gmail.com>"]
edition = "2021"
description = """
Simple timer for pomodoro technique
"""
repository = "https://github.com/sigoden/tomato-timer"
keywords = ["terminal", "fonts"]
exclude = ["assets/*", ".github"]
readme = "README.md"

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
tui = "0.17.0"
crossterm = "0.23.0"
terminal-fonts = "0.1.0"
notify-rust = "4.5.6"

[profile.release]
lto = true
strip = true
opt-level = "z"
